Use relative path to appease IntelliJ